[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "natal-chart-calculator"
version = "1.0.0"
description = "Enhanced natal chart calculator with interactive mode, multiple house systems, and advanced pattern detection"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Dylan Marriner", email = "dylan@example.com"}
]
maintainers = [
    {name = "Dylan Marriner", email = "dylan@example.com"}
]
keywords = ["astrology", "natal-chart", "astronomy", "swisseph", "birth-chart"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Astronomy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "skyfield>=1.49",
    "pytz>=2023.3",
    "swisseph>=2.10.3.0",
    "pandas>=1.3.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
gui = [
    "streamlit>=1.28.0",
    "pandas>=1.3.0",
]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/dylanmarriner/natal-chart-calculator"
Documentation = "https://github.com/dylanmarriner/natal-chart-calculator/blob/main/README.md"
Repository = "https://github.com/dylanmarriner/natal-chart-calculator.git"
"Bug Tracker" = "https://github.com/dylanmarriner/natal-chart-calculator/issues"

[project.scripts]
natal-chart = "natal_chart_enhanced:main"
natal-chart-gui = "desktop_gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.csv"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
